# NB4444spa

./: README.md  docker-compose-prod.yml  docker-compose-test.yml  docker-compose.yml  start.sh  update.sh
NB4444/: .gitignore  Dockerfile  Jenkinsfile  Procfile  README.md  docker-compose-prod.yml  docker-compose.yml  heroku.yml  manage.py  prod.Dockerfile  pyproject.toml  requirements.txt  test_start.sh  update.sh
NB4444/B4/: admin.py  admin_filters.py  apps.py  mixins.py  models.py
NB4444/B4/management/commands/: create_today_plan.py
NB4444/B4/migrations/: 0001_initial.py  0002_note_user.py  0003_defaultdeductions_user.py  0004_auto_20211107_1944.py  0005_auto_20211122_2316.py  0006_auto_20220409_1201.py  0007_auto_20220409_1209.py  0008_auto_20220417_2310.py  0009_auto_20221218_1504.py  0010_auto_20221221_0102.py  0011_auto_20221221_0134.py  0012_auto_20221224_1939.py  0013_auto_20221224_2154.py  0014_auto_20221230_1100.py  0015_auto_20231022_2108.py  0016_auto_20231022_2118.py  0017_auto_20231022_2122.py
NB4444/B4/tests/: tests_common.py
NB4444/NB4444/: asgi.py  settings.py  urls.py  wsgi.py
NB4444/api/: mixins.py  permissions.py  router.py  serializers.py  urls.py  views.py
NB4444/common_static/bootstrap/js/: bootstrap.js  (+1 more)
NB4444/common_static/css/: style.css
NB4444/common_static/js/: main.js
NB4444/fixture/: fixture.json
NB4444/nginx/: Dockerfile
NB4444/nginx/conf/: nginx.conf
NB4444/templates/: 404.html  base.html  head.html  navigate.html
NB4444/templates/el_pagination/: current_link.html  page_link.html  show_pages.html
NB4444/templates/pages/: general.html  login.html
NB4444/web/: apps.py  forms.py  mixins.py  urls.py  utils.py  views.py
(+43 files in other folders)
